<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/add_meeting_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/add_meeting_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/add_meeting_et_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:hint="Sujet de la réunion"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_meeting_appbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/add_meeting_til_location" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_meeting_til_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:hint="Salle de réunion"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_meeting_room_24"
            app:endIconContentDescription="meeting room"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_meeting_et_event"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/add_meeting_til_date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_meeting_et_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_meeting_til_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_weight="2"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:hint="dd/MM/yyyy"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_today_24"
            app:endIconContentDescription="Date of meeting"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_meeting_til_location"
            app:layout_constraintEnd_toStartOf="@+id/add_meeting_til_start_time"
            app:layout_constraintBottom_toTopOf="@+id/add_meeting_til_mails">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_meeting_et_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="datetime"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_meeting_til_start_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_weight="1"
            android:layout_marginEnd="16dp"
            android:hint="HH:mm"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_access_time_24"
            app:endIconContentDescription="Select time meeting"
            app:layout_constraintStart_toEndOf="@+id/add_meeting_til_date"
            app:layout_constraintTop_toTopOf="@+id/add_meeting_til_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/add_meeting_til_date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_meeting_et_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_meeting_til_mails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:hint="Adresse email des participants"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_meeting_til_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_meeting_et_mails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
