<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.decroix.nicolas.mareu.controller.fragments.AddMeetingFragment">
    <item
        android:id="@+id/add_meeting_item_save"
        android:orderInCategory="100"
        android:icon="@drawable/ic_check_24"
        android:title="SAVE"
        app:showAsAction="ifRoom" />
</menu>