<?xml version="1.0" encoding="utf-8"?>
<androidx.recyclerview.widget.RecyclerView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_list_meeting_rv_meetings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    tools:listitem="@layout/list_meeting_item"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".controller.activities.MeetingActivity">

</androidx.recyclerview.widget.RecyclerView>